# eu-dss-module

./: .gitignore  CHANGELOG.md  README.md  pom.xml
.github/workflows/: linux-installer.yml  macos-installer.yml  rust-signer.yml  tauri-app.yml  windows-installer.yml
docs/: INSTALL.md  deeplink-integration.md
docs/plans/: 2026-06-23-detached-signature-handling.md
docs/specs/: 2026-06-23-detached-signature-handling-design.md
docs/superpowers/plans/: 2026-05-29-multi-format-signing-backend.md  2026-05-30-cross-platform-browser-access.md  2026-05-30-multi-format-signing-ui.md  2026-06-01-pin-at-signing-time.md  2026-06-01-prerequisites-wizard.md  2026-06-01-sp2-windows-trusted-cert-autostart.md  2026-06-02-sp2b-macos-trusted-cert-autostart.md  2026-06-02-sp2c-linux-deb-trusted-cert-autostart.md  2026-06-20-plan2-tauri-app.md  2026-06-20-rust-pkcs11-signing-core.md  (+1 more)
eu-dss-agent/: pom.xml
eu-dss-server/: pom.xml
eu-dss-ui/: index.html  package-lock.json  package.json
eu-dss-ui/design-ref/: EU-DSS-Sign.dc.html  README.md
eu-dss-ui/src/: App.tsx  main.tsx  styles.css
eu-dss-ui/src-tauri/: .gitignore  Cargo.toml  macos-app.entitlements  tauri.conf.json  tauri.macos.conf.json
eu-dss-ui/src-tauri/capabilities/: default.json
eu-dss-ui/src-tauri/icons/: icon.icns
eu-dss-ui/src-tauri/src/: backend.rs  commands.rs  lib.rs  signer_state.rs
eudss-signer/: .gitignore  Cargo.toml
eudss-signer/oracle/: README.md  compare.sh
eudss-signer/src/: cert.rs  digest.rs  error.rs  keyid.rs  lib.rs  mechanism.rs  module.rs  session.rs  signer.rs  token.rs
eudss-signer/tests/: setup_softhsm.sh  softhsm_integration.rs
eudss-signer/tests/fixtures/: test-cert.der
macos/: eu-dss-agent-macos.sh
packaging/linux/: build-agent-deb.sh  real-card-sign-e2e.sh
packaging/macos/: build-agent-pkg.sh
packaging/windows/: build-agent-msi.ps1
test-client/: README.md  deeplink-test.mjs
test-client/received/: 1782047824254-contrat.asice
(+100 files in other folders)
