[package]
name = "app"
version = "1.2.0"
description = "EU-DSS Sign — desktop client for PAdES/XAdES document signing with a PKCS#11 token"
authors = ["Linagora <mmaudet@linagora.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/mmaudet/eu-dss-module"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
eudss-signer = { path = "../../eudss-signer" }
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
